--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -26,7 +26,6 @@
   --line-height-small: 1.2;
   --line-height-base: 1.5;
   --line-height-small: 1.8;
-
 } 
 
 
@@ -40,6 +39,7 @@ body {
   font-family: var(--font-family-base);
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-regular);
+  line-height: var(--line-height-base);
 }
 
 h1, h2, h3, h4, h4, h5, h6 {
