8. Defining line heights

--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -25,7 +25,7 @@
   /* LINE-HEIGHT  */
   --line-height-small: 1.2;
   --line-height-base: 1.5;
-  --line-height-small: 1.8;
+  --line-height-big: 1.8;
 } 
 
 
