11. Add more styles to the section tagline

--- a/0x02-CSS_advanced/styles/11-style.css
+++ b/0x02-CSS_advanced/styles/11-style.css
@@ -74,4 +74,5 @@ a {
   color: var(--color-primary);
   font-family: var(--font-family-title);
   text-transform: var(--section-tagline-transform);
+  font-weight: var(--font-weight-bold);
 }
