12. Adding more styling to the section title

--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -30,10 +30,12 @@
 
   /* ALIGN  */
   --section-header-align: center;
-  --section-title-margin: 0;
-
+  
   /* TEXT-TRANSFORM  */
   --section-tagline-transform: uppercase;
+
+  /* MARGIN  */
+  --section-title-margin: 0;
 } 
 
 
@@ -72,12 +74,18 @@ a {
   text-align: var(--section-header-align);
 }
 
+.section-title {
+  font-family: var(--font-family-title);
+  font-size: var(--font-size-xx-large);
+  font-weight: var(--font-weight-bold);
+  margin: var(--section-title-margin);
+  color: var(--section-title-color);
+
+}
+
 .section-tagline {
   color: var(--color-primary);
   font-family: var(--font-family-title);
   text-transform: var(--section-tagline-transform);
   font-weight: var(--font-weight-bold);
-  font-size: var(--font-size-xx-large);
-  margin: var(--section-title-margin);
-  color: var(--section-title-color);
 }
