--- a/0x02-CSS_advanced/styles/14-style.css
+++ b/0x02-CSS_advanced/styles/14-style.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h4, h5, h6 {
   font-weight: var(--font-weight-bold);
 }
 
-a {
+a[href] {
   color: var(--text-color);
   text-decoration: none;
 }
