--- a/0x02-CSS_advanced/styles/16-style.css
+++ b/0x02-CSS_advanced/styles/16-style.css
@@ -44,7 +44,8 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
   --section-title-margin: 0;
 } 
 
-* {
+
+*, *:before, *:after {
   box-sizing: border-box;
 }
 
@@ -66,7 +67,7 @@ h1, h2, h3, h4, h4, h5, h6 {
   font-weight: var(--font-weight-bold);
 }
 
-a {
+a[href] {
   color: var(--text-color);
   text-decoration: none;
 }
