--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -52,7 +52,7 @@ body {
   line-height: var(--line-height-base);
 }
 
-h1, h2, h3, h4, h4, h5, h6 {
+section :is(h1, h2, h3, h4, h5, h6) {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-bold);
 }
