--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -57,7 +57,7 @@ section :is(h1, h2, h3, h4, h5, h6) {
   font-weight: var(--font-weight-bold);
 }
 
-a[href] {
+a:link {
   color: var(--text-color);
   text-decoration: none;
 }
