--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -71,7 +71,7 @@ a:hover {
 }
 
 a:active {
-  color: var(--color-light-grey);
+  background-color: var(--color-light-grey);
 }
 
 .visually-hidden {
