25. Add border to the button

--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -247,6 +247,7 @@ ul.row {
 [data-section-theme="dark"] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
+  --button-color: var(--color-white);
   background-color: var(--color-black);
 }
 
